--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,1 +1,46 @@
-<p>register-page works!</p>
+<div class="flex flex-column">
+  <span class="text-lg mb-4">
+    Registro
+  </span>
+  <mat-form-field>
+    <mat-label>Usuario</mat-label>
+    <input
+      matInput
+      type="text"
+      placeholder="Nombre de usuario"
+    >
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Nombre</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="Nombre"
+    >
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Contraseña</mat-label>
+    <input
+      type="text"
+      matInput
+      placeholder="Contraseña"
+    >
+  </mat-form-field>
+
+  <button
+    type="button"
+    mat-button
+    mat-flat-button
+    color="primary"
+  >
+    <mat-icon>save</mat-icon>
+    Registar
+  </button>
+
+  <div class="flex justify-content-end">
+    <a routerLink="/auth/login" >¿Ya tienes cuenta?</a>
+  </div>
+
+</div>
