--- a/src/app/heroes/pages/hero-page/hero-page.component.html
+++ b/src/app/heroes/pages/hero-page/hero-page.component.html
@@ -1,1 +1,42 @@
-<p>hero-page works!</p>
+<ng-template #divLoading>
+   <div class="card mt-5">
+     <div class="flex justify-content-center align-content-center m-auto" style="width: 100%; height: 100%;">
+       <mat-spinner></mat-spinner>
+
+     </div>
+   </div>
+
+</ng-template>
+
+<div *ngIf="hero; else divLoading" class="grid mt-2 p-2">
+ <mat-card class="col-12 sm:col-6">
+   <mat-card-header>
+     <mat-card-title>{{ hero.alter_ego }}</mat-card-title>
+     <mat-card-subtitle> {{ hero.superhero}} </mat-card-subtitle>
+   </mat-card-header>
+
+   <img [src]="hero | heroImage" [alt]="hero.superhero" matCardImage>
+ </mat-card>
+
+  <mat-card class="col-12 sm:col-6">
+    <mat-card-header>
+      <mat-card-title>Información</mat-card-title>
+      <mat-card-subtitle> {{ hero.superhero}} </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item>{{ hero.first_appearance }}</mat-list-item>
+        <mat-list-item>{{ hero.characters }}</mat-list-item>
+        <mat-list-item>{{ hero.publisher }}</mat-list-item>
+        <mat-list-item>{{ hero.alter_ego }}</mat-list-item>
+      </mat-list>
+      <button
+      mat-button
+      color="warn"
+      (click)="goBack()"
+      >
+      Regresar
+      </button>
+    </mat-card-content>
+  </mat-card>
+</div>
