--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -39,7 +39,7 @@
     Registar
   </button>
 
-  <div class="flex justify-content-end">
+  <div class="flex justify-content-end mt-3">
     <a routerLink="/auth/login" >¿Ya tienes cuenta?</a>
   </div>
 
